# socli

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  socli.py
.github/workflows/: main.yml  pr.yml
include/: announcement.h  client.h  command.h  confirm.h  contest.h  judge.h  kson.h  login.h  version.h
lib/: kson.c
lib/include/: sr_keychain.c  sr_keychain.h
src/: announcement.c  client.c  command.c  confirm.c  contest.c  judge.c  login.c  main.c
template/: version.h.in
